crates/pcb-zen/tests/snapshots/canonical_snapshot__gitignore_patterns.snap
---
source: crates/pcb-zen/tests/canonical_snapshot.rs
expression: "format!\n(\"entries:\\n{}\\n\\nhash: {}\", if entries.is_empty() { \"(none)\".to_string() }\nelse { entries.join(\"\\n\") }, content_hash)"
---
entries:
important.log
main.zen
other/cache.tmp
sub/code.zen

hash: h1:9x2KQ9R9AtlOHqFcBa/WD/k/RFV5ArVIA3Y6abOHtbM=
